# LightningFiler

./: .gitignore  00_Project_Definition.md  01_Architecture.md  02_Database_FileSystem.md  03_Input_UX.md  04_UI_Rendering.md  05_Extension_API.md  Cargo.toml  DECISIONS.md  README.md  build_release.ps1
.github/workflows/: release.yml
crates/app_core/: Cargo.toml
crates/app_core/src/: command.rs  config.rs  error.rs  i18n.rs  image_loader.rs  lib.rs  navigation.rs  resource.rs  state.rs  thumbnail_manager.rs
crates/app_db/: Cargo.toml
crates/app_db/src/: lib.rs  pool.rs  rocksdb_cache.rs  schema.rs  sqlite.rs
crates/app_fs/: Cargo.toml
crates/app_fs/src/: browser.rs  encoding.rs  file_operations.rs  lib.rs  sanitize.rs  universal_path.rs  vfs.rs  watcher.rs
crates/app_log/: Cargo.toml
crates/app_log/src/: lib.rs  logging.rs  panic_hook.rs
crates/app_main/: Cargo.toml
crates/app_main/src/: app.rs  main.rs
crates/app_ui/: Cargo.toml
crates/app_ui/src/: input.rs  lib.rs  renderer.rs  theme.rs
crates/app_ui/src/components/: dialogs.rs  effects.rs  file_browser.rs  folder_tree.rs  mod.rs  settings.rs  slideshow.rs  split_view.rs  spread_viewer.rs  status_bar.rs  thumbnail_catalog.rs  toolbar.rs  viewer.rs
crates/ipc_proto/: Cargo.toml
crates/ipc_proto/src/: lib.rs
crates/susie_host/: Cargo.toml
crates/susie_host/src/: bridge.rs  main.rs  susie.rs
locales/en/: main.ftl
locales/ja/: main.ftl
resources/locales/en/: main.ftl
resources/locales/ja/: main.ftl
