[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["takawasi"]
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/takawasi/LightningFiler"

[workspace.dependencies]
# Async & Parallelism
tokio = { version = "1.41", features = ["full", "tracing"] }
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
dashmap = "6.1"

# GUI & Rendering
winit = "0.30"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
wgpu = "22.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
cosmic-text = "0.12"

# System & IPC
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Memory",
    "Win32_System_JobObjects",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
] }
interprocess = "2.2"
shared_memory = "0.12"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Error
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2.0"
anyhow = "1.0"
backtrace = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Data
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "multi-threaded-cf"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1.11", features = ["v4"] }

# Archive & Encoding
zip = "2.2"
sevenz-rust = "0.6"
tar = "0.4"
flate2 = "1.0"
chardetng = "0.1"
encoding_rs = "0.8"

# i18n
fluent = "0.16"
fluent-langneg = "0.14"
unic-langid = "0.9"

# Config
toml = "0.8"
directories = "5.0"

# Scripting (Phase 3)
mlua = { version = "0.9", features = ["luajit", "serialize"] }

# Native plugin support
libloading = "0.8"

# Utilities
once_cell = "1.20"
futures = "0.3"
async-trait = "0.1"
derive_more = { version = "1.0", features = ["display", "from", "error"] }

# File operations
arboard = "3.4"
trash = "5.1"
dirs-next = "2.0"
open = "5.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
