[package]
name = "app_db"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
app_fs = { path = "../app_fs" }

thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
directories.workspace = true

# Database
rusqlite.workspace = true
rocksdb.workspace = true
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Utils
xxhash-rust.workspace = true
