[package]
name = "app_fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
xxhash-rust.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
parking_lot.workspace = true

# Archive support
zip.workspace = true
sevenz-rust.workspace = true
tar.workspace = true
flate2.workspace = true

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# File operations
arboard = { workspace = true, optional = true }
trash = { workspace = true, optional = true }
dirs-next = { workspace = true, optional = true }
open = { workspace = true, optional = true }

[features]
default = ["clipboard", "trash-support", "open-external"]
clipboard = ["dep:arboard"]
trash-support = ["dep:trash"]
open-external = ["dep:open", "dep:dirs-next"]

[target.'cfg(windows)'.dependencies]
windows.workspace = true
