[package]
name = "susie_host"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

# This is a 32-bit binary for Susie plugin compatibility
# Build with: cargo build --target i686-pc-windows-msvc -p susie_host

[[bin]]
name = "susie_bridge"
path = "src/main.rs"

[dependencies]
ipc_proto = { path = "../ipc_proto" }

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
serde.workspace = true

# Plugin loading
libloading.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }
